# dr-shooting

./: .gitignore  package.json  pnpm-lock.yaml
app/components/ui/: Center.vue  Scope.vue
app/composables/: pointer.ts  shot.ts  three.ts
app/composables/three/: fire.ts  xr.ts
app/pages/: index.vue
server/: README.md  pyproject.toml  server.py  websocket_server.py
unity/Assets/: FastSAMClient.cs
unity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity/ProjectSettings/: ProjectSettings.asset
web/: README.md  nuxt.config.ts
web/app/assets/styles/: _mq.scss  main.scss
web/app/components/: Screen.vue
web/app/composables/: gamePhase.ts  segmentation.ts  shot.ts  three.ts
web/app/composables/three/: calibrationMode.ts  cameraCapture.ts  core.ts  destructionEffect.ts  destructionPlane.ts  gameUI.ts  hintArrow.ts  hitTest.ts  imageCalibration.ts  input.ts  maskOverlay.ts  models.ts  quest.ts  reticle.ts  roomMesh.ts  scoreDisplay.ts  segmentationInit.ts  shotEffect.ts  webcam.ts  xr.ts
web/app/pages/: index.vue
